hphp/hack/test/typecheck/array/disallow_empty_varray_where_dict_like_array_is_required.php.exp
File "disallow_empty_varray_where_dict_like_array_is_required.php", line 4, characters 10-17:
Invalid return type (Typing[4110])
File "disallow_empty_varray_where_dict_like_array_is_required.php", line 3, characters 18-38:
Expected darray<string, string>
File "disallow_empty_varray_where_dict_like_array_is_required.php", line 4, characters 10-17:
But got varray<nothing>
